--- a/backend/package.json
+++ b/backend/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "praveen",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.0.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3"
   }
 }
