--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -15,7 +15,8 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
