--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,8 @@ JWT_EXPIRY = '24h'
 CLOUDINARY_CLOUD_NAME = "disbkeel9"
 CLOUDINARY_API_KEY = "811751432348775"
 CLOUDINARY_API_SECRET = "YEbNRN-NvjBaZDnzFeIp49SXfp4"
+
+PUBLIC_KEY="public_JyqFy4KIWtQWZv9/oF6CbkIH4Qk="
+PRIVATE_KEY ="private_SL8Ywj3aE+k2AshoIcVPwXEvFXM="
+URL_END_POINT ="https://ik.imagekit.io/naakanxmp"
+  
