forget password implemented

--- a/backend/.env
+++ b/backend/.env
@@ -8,4 +8,7 @@ CLOUDINARY_API_SECRET = "YEbNRN-NvjBaZDnzFeIp49SXfp4"
 PUBLIC_KEY="public_JyqFy4KIWtQWZv9/oF6CbkIH4Qk="
 PRIVATE_KEY ="private_SL8Ywj3aE+k2AshoIcVPwXEvFXM="
 URL_END_POINT ="https://ik.imagekit.io/naakanxmp"
+
+RAZORPAY_SECRET_KEY="wQW8qZBVOery0OGXsJllEl4j"
+RAZORPAY_KEY_ID="rzp_test_qG338cWNodRfGK"
   
