--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,14 @@
     "cloudinary": "^2.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "imagekit": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.3"
+    "nodemailer": "^6.9.10",
+    "nodemon": "^3.0.3",
+    "razorpay": "^2.9.2"
   }
 }
